apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__policy__tests__or_and-4.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
assertion_line: 1156
expression: "TestResult\n{\n    query: QUERY, extracted_policies: &extracted_policies,\n    successful_policies:\n    [\"admin\".to_string(), \"read user\".to_string()].into_iter().collect(),\n    result: doc, paths\n}"
---
query:

        {
            customer {
                id
            }
        }
        
extracted_policies: {"admin", "internal", "read user"}
successful policies: ["admin", "read user"]
filtered:
{
  customer {
    id
  }
}

paths: []
