apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__policy__tests__or_and.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
assertion_line: 1111
expression: "TestResult\n{\n    query: QUERY, extracted_policies: &extracted_policies,\n    successful_policies: Vec::new(), result: doc, paths\n}"
---
query:

        {
            customer {
                id
            }
        }
        
extracted_policies: {"admin", "internal", "read user"}
successful policies: []
filtered:

paths: ["/customer"]
