apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__policy__tests__query_field_alias.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
assertion_line: 939
expression: "TestResult\n{\n    query: QUERY, extracted_policies: &extracted_policies,\n    successful_policies: Vec::new(), result: doc, paths\n}"
---
query:

        query {
            topProducts {
                type
            }

            moi: me {
                name
            }
        }
        
extracted_policies: {"profile", "read user", "read username"}
successful policies: []
filtered:
{
  topProducts {
    type
  }
}

paths: ["/me"]
