apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__policy__tests__renamed_directive.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
assertion_line: 1525
expression: "TestResult\n{\n    query: QUERY, extracted_policies: &extracted_policies,\n    successful_policies: Vec::new(), result: doc, paths\n}"
---
query:

          query {
              topProducts {
                  type
              }
              me {
                  name
              }
          }
          
extracted_policies: {"profile", "read:user", "read:username"}
successful policies: []
filtered:
{
  topProducts {
    type
  }
}

paths: ["/me"]
