apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__policy__tests__union.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
assertion_line: 1445
expression: "TestResult\n{\n    query: QUERY, extracted_policies: &extracted_policies,\n    successful_policies: [\"a\".to_string()].into_iter().collect(), result: doc,\n    paths\n}"
---
query:

        query {
            test
            uni {
                ... on A {
                    id
                }
                ... on B {
                    id
                }
            }
        }
        
extracted_policies: {"a", "b"}
successful policies: ["a"]
filtered:
{
  test
  uni {
    ... on A {
      id
    }
  }
}

paths: ["/uni/... on B"]
